feat: created response type and doc user controller
