# docs/swagger.yaml
@@ -1,9 +1,181 @@
 basePath: /api/v1
+definitions:
+  user.User:
+    properties:
+      created_at:
+        type: string
+      deleted_at:
+        type: string
+      email:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+      role:
+        type: string
+      updated_at:
+        type: string
+    type: object
+  user.UserResponse:
+    properties:
+      message:
+        type: string
+    type: object
 host: localhost:8080
 info:
   contact: {}
   description: API for task management
   title: NostraTask API
   version: "1.0"
-paths: {}
+paths:
+  /users:
+    get:
+      consumes:
+      - application/json
+      description: Fetches the details of all users in the system
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/user.User'
+            type: array
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/user.UserResponse'
+      summary: Retrieve all users
+      tags:
+      - users
+    post:
+      consumes:
+      - application/json
+      description: Adds a new user to the system
+      parameters:
+      - description: User input data
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/user.User'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/user.User'
+        "400":
+          description: Invalid input data
+          schema:
+            $ref: '#/definitions/user.UserResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/user.UserResponse'
+      summary: Create a new user
+      tags:
+      - users
+  /users/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Removes a user from the system by their UUID
+      parameters:
+      - description: User ID (UUID)
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: User successfully deleted
+          schema:
+            $ref: '#/definitions/user.UserResponse'
+        "400":
+          description: Invalid UUID format
+          schema:
+            $ref: '#/definitions/user.UserResponse'
+        "404":
+          description: User not found
+          schema:
+            $ref: '#/definitions/user.UserResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/user.UserResponse'
+      summary: Delete a user by ID
+      tags:
+      - users
+    get:
+      consumes:
+      - application/json
+      description: Fetches the details of a user by their UUID
+      parameters:
+      - description: User ID (UUID)
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/user.User'
+        "400":
+          description: Invalid UUID format
+          schema:
+            $ref: '#/definitions/user.UserResponse'
+        "404":
+          description: User not found
+          schema:
+            $ref: '#/definitions/user.UserResponse'
+      summary: Retrieve a user by ID
+      tags:
+      - users
+    put:
+      consumes:
+      - application/json
+      description: Modifies details of an existing user
+      parameters:
+      - description: User ID (UUID)
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: User updated data
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/user.User'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/user.User'
+        "400":
+          description: Invalid input or UUID format
+          schema:
+            $ref: '#/definitions/user.UserResponse'
+        "404":
+          description: User not found
+          schema:
+            $ref: '#/definitions/user.UserResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/user.UserResponse'
+      summary: Update user details
+      tags:
+      - users
 swagger: "2.0"
