# internal/user/user_responses.go
@@ -1,1 +1,7 @@
 package user
+
+// Error Response
+
+type UserResponse struct {
+	Message string `json:"message"`
+}
